--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "services": [
         {
             "name": "hirusha-class-notes-pocketbase",
-            "url": "https://https://db.ictwith.me/_/",
+            "url": "https://https://db.ictwith.me/_/#/login",
             "run_command": {
                 "in_dir": "/srv/hirusha-class-notes/pocketbase/",
                 "command": "docker compose down && docker compose up -d"
@@ -10,7 +10,7 @@
         },
         {
             "name": "hirusha-shama-nadu-potha-pocketbase",
-            "url": "http://shama-db.h3ck.cc/_/",
+            "url": "https://shama-db.h3ck.cc/_/#/login",
             "run_command": {
                 "in_dir": "/srv/hirusha-shama-nadu-potha/pocketbase/",
                 "command": "docker compose down && docker compose up -d"
